--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <div class="eight columns">
     {% for post in site.posts limit: 3 %}
     <h3>
-      <a href="{{ post.url }}">{{post.title}}</a>
+      <a href="{{site.baseurl}}{{ post.url }}">{{post.title}}</a>
     </h3>
 
     <div class="row">
@@ -21,7 +21,7 @@ layout: default
     <p>from the archives</p>
     <ul class="disc">
       {% for post in site.posts offset: 3 limit: 10 %}
-      <li><a href="{{post.url}}">{{post.title}}</a></li>
+      <li><a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a></li>
       {% endfor %}
     </ul>
     <h4>Bob Cobb</h4>
